--- a/apistyle.css
+++ b/apistyle.css
@@ -12,7 +12,7 @@ body {
    background-color: #FFFFFF;
    width: 400px;
    height: 400px;
-   margin: 7em auto;
+   margin: 2em auto;
    border-radius: 1.5em;
 }
 
@@ -54,6 +54,11 @@ body {
    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
 
+input[type="submit"].submit:hover {
+  background: linear-gradient(to right, #737DEA, #143CD8);
+  cursor: pointer;
+}
+
 .linker {
    color: #082280;
    padding-top: 15px;
@@ -61,9 +66,9 @@ body {
 
 .text {
    color: white;
-   margin-left: 250px;
-   margin-right: 250px;
-   font-size: 20px;
+   margin-left: 300px;
+   margin-right: 300px;
+   font-size: 14px;
    text-align: center;
  }
 
